--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,12 @@ url: http://chiefknows.github.io
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organizaion's page leave it empty)
-baseurl: '/'
+baseurl: ''
 
 social:
   github: 
-  stackoverflow: ''
-  linkedin:
-  instagram: ''
-  lastfm: ''
+  linkedin: 'titus-ragins-29851844'
+  rallypoint: 'chiefknows'
   rss: feed.xml
 
 # Google Analytics key, leave blank to ignore
